--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@hebcal/core": "^3.42.1",
+    "@hebcal/leyning": "^4.17.0",
     "@react-native-community/slider": "^4.3.0",
     "react": "18.0.0",
     "react-mixin": "^5.0.0",
